--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,11 @@
 <html lang="en">
   {{ partial "head.html" . }}
   <body>
-    {{ block "main" . }}{{ end }}
+    <main class="page">
+      {{ block "main" . }}{{ end }}
+    </main>
+    <aside class="side">
+      <p>Sidebar content coming soon.</p>
+    </aside>
   </body>
 </html>
