--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,18 @@
 <header class="site-header">
   <nav class="top-navigation">
     <a class="logo" href="/">juhaliikala.com</a>
-    <div class="mobile-nav">{{ collections.all | eleventyNavigation | eleventyNavigationToHtml | safe }}</div>
+    <div class="mobile-nav">
+      {{ if ne .IsHome true }}
+        <a class="normal" href="/"> <span class="arrow">←</span> Home</a>
+        {{ end }}
+
+        {{ range .Site.Menus.main }}
+          {{ if .Page.Params.redirect }}
+            <a href="{{ .Page.Params.redirect }}">{{ .Name }}</a>
+          {{ else }}
+            <a href="{{ .URL | relLangURL | safeURL }}">{{ .Name }}</a>
+          {{ end }}
+        {{ end }}
+    </div>
   </nav>
 </header>
