--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <ul id="post-list">
+<section class="posts" id="post-list">
   {{ if or .IsHome .Site.Params.paginate_categories }}
     {{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") }}
     {{ $list := $paginator.Pages }}
@@ -12,8 +12,8 @@
       {{ partial "post-item.html" . }}
     {{ end }}
   {{ end }}
-  </ul>
-  {{ if .IsHome }}
+</section>
+{{ if .IsHome }}
     {{ if .Site.Params.paginate_home }}
       {{ partial "pagination" . }}
     {{ end }}
