--- a/layouts/partials/post-item.html
+++ b/layouts/partials/post-item.html
@@ -1,21 +1,28 @@
-<li>
-  <article>
-    {{ if .Title }}
-    <section class="post-body">
+<section class="post-content">
+  {{ if .Title }}
+  <a class="cover-link" href="{{ .Permalink }}">
+    <figure class="cover-image">
+      <img class="cover-image" src="{{post.data.cover}}" />
+    </figure>
+  </a>
+  <article class="mb-5">
     <header>
-    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      <h2 class="post-title">
+        <a href="{{ .Permalink }}">
+          {{ .Title }}
+        </a>
+      </h2>
     </header>
-    <section class="post-body">
     {{ .Content }}
-    </section>
-    </section>
-    {{ else }}
-    {{ .Content }}
-    {{ end }}
-    <a href="{{ .Permalink }}" class="u-url">
-    <aside class="dates">
-      <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
-    </aside>
-    </a>
+  {{ else }}
+  <article class="mb-5">
+  {{ .Content }}
+  {{ end }}
   </article>
-  </li>
+  <div class="post-meta">
+    <a href="{{ .Permalink }}" class="u-url">
+      <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
+    </a>
+    <a class="read-more" href="{{ .Permalink }}">Continue reading →</a>
+  </div>
+</section>
