--- a/layouts/partials/post-item.html
+++ b/layouts/partials/post-item.html
@@ -1,10 +1,13 @@
 <section class="post-content">
   {{ if .Title }}
+  {{ $first_image := index (.Page.Resources.Match "*.jpg") 0 }}
+  {{ if $first_image }}
   <a class="cover-link" href="{{ .Permalink }}">
     <figure class="cover-image">
-      <img class="cover-image" src="{{post.data.cover}}" />
+      <img class="cover-image" src="{{ $firstImage.RelPermalink }}" />
     </figure>
   </a>
+  {{ end }}
   <article class="mb-5">
     <header>
       <h2 class="post-title">
