Add more stuff for microblog theming

--- a/layouts/partials/post-item.html
+++ b/layouts/partials/post-item.html
@@ -4,7 +4,7 @@
   {{ if $first_image }}
   <a class="cover-link" href="{{ .Permalink }}">
     <figure class="cover-image">
-      <img class="cover-image" src="{{ $firstImage.RelPermalink }}" />
+      <img class="cover-image" src="{{ $first_image.RelPermalink }}" />
     </figure>
   </a>
   {{ end }}
