--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,19 +1,28 @@
 {{ define "main" }}
-<article class="h-entry post">
-  <header>
-    <h1 class="p-name">{{ .Title }}</h1>
-  </header>
-  <section class="e-content post-body">
-      {{ .Content }}
+<section class="post-content">
+  {{ $first_image := index (.Page.Resources.Match "*.jpg") 0 }}
+  <figure class="cover-image">
+    <img
+      src="{{ $first_image.RelPermalink }}"
+      alt="Post cover image for {{ .Title }}"
+      loading="lazy">
+  </figure>
+  <article class="h-entry post">
+    <header>
+      <h1 class="p-name page-title">{{ .Title }}</h1>
+    </header>
+    <section class="e-content post-body">
+        {{ .Content }}
+    </section>
+  </article>
+  <section id="post-meta">
+    <a href="/">
+      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
+      <div>
+        <span class="p-author h-card dark">{{ .Site.Author.name }}</span>
+        <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
+      </div>
+    </a>
   </section>
-</article>
-<section id="post-meta">
-  <a href="/">
-    <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
-    <div>
-      <span class="p-author h-card dark">{{ .Site.Author.name }}</span>
-      <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
-    </div>
-  </a>
 </section>
 {{ end }}
