Add more stuff for microblog theming

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -7,6 +7,7 @@
       alt="Post cover image for {{ .Title }}"
       loading="lazy">
   </figure>
+  {{ end -}}
   <article class="h-entry post">
     <header>
     {{ with .Title }}
