Add more stuff for microblog theming

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -4,7 +4,7 @@
   <figure class="cover-image">
     <img
       src="{{ index . 0 | absURL }}"
-      alt="Post cover image for {{ .Title }}"
+      alt="Post cover image"
       loading="lazy">
   </figure>
   {{ end -}}
