Add more stuff for microblog theming

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section class="post-content">
-  {{- with $.Params.images and -}}
+  {{- with $.Params.images -}}
     {{ with .Title }}
     <figure class="cover-image">
       <img
