--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,15 +1,15 @@
 {{ define "main" }}
 <section class="post-content">
-  {{- with $.Params.images -}}
-    {{ with .Title }}
-    <figure class="cover-image">
-      <img
-        src="{{ index . 0 | absURL }}"
-        alt="Post cover image"
-        loading="lazy">
-    </figure>
-    {{ end }}
-  {{ end -}}
+  {{ if .Title}}
+    {{- with $.Params.images -}}
+      <figure class="cover-image">
+        <img
+          src="{{ index . 0 | absURL }}"
+          alt="Post cover image"
+          loading="lazy">
+      </figure>
+    {{ end -}}
+  {{ end }}
   <article class="h-entry post">
     <header>
     {{ with .Title }}
