--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -13,39 +13,24 @@
   <article class="h-entry post">
     <header>
     {{ with .Title }}
-      <h1 class="p-name page-title">{{ . }}</h1>
+      <h1 class="p-name post-title">{{ . }}</h1>
       {{ end }}
-      <h2 class="headline">
+      <h2 class="headline post-title">
         <time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}">
-          <a class="u-url dates" href="{{ .Permalink }}">{{ .Date.Format "Jan 2, 2006" }}</a>
+          <span class="dates" href="{{ .Permalink }}">{{ .Date.Format "Jan 2, 2006" }}</span>
         </time>
       </h2>
     </header>
     <section class="e-content post-body">
         {{ .Content }}
     </section>
-
-    {{ if .Site.Params.include_conversation }}
-    <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
-    {{ end }}
-
-    <section id="post-meta" class="clearfix p-author h-card">
-      <a href="/" class="u-url">
-      {{ if .Params.author }}
-      <img class="u-photo avatar" src="{{ .Params.author.avatar }}" width="96" height="96">
-      <div>
-        <span class="p-name dark">{{ .Params.author.name }}</span>
-        <span><a href="https://micro.blog/{{ .Params.author.username }}">@{{ .Params.author.username }}</a></span>
-      </div>
-      {{ else }}
-      <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
-      <div>
-        <span class="p-name dark">{{ .Site.Author.name }}</span>
-        <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
-      </div>
-    {{ end }}
-      </a>
-    </section>
   </article>
 </section>
+
+  {{ if .Site.Params.include_conversation }}
+  <section class="conversation">
+    <h3>Conversation</h3>
+    <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
+  </section>
+  {{ end }}
 {{ end }}
