--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -412,6 +412,31 @@ footer.post-meta {
   display: none
 }
 
+/* Conversation */
+
+.conversation {
+  max-width: 90%;
+  padding: 30px 0;
+  margin: 0 auto;
+  color: var(--text-color);
+}
+
+.conversation .microblog_time a {
+  color: #ca2017 !important;
+}
+
+.conversation .microblog_user {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.conversation .microblog_avatar {
+  border-radius: 100%;
+  width: 25px;
+  height: 25px;
+}
+
 /* Navigation */
 
 .top-navigation {
@@ -648,7 +673,6 @@ article p:last-of-type, .bio p:last-of-type {
 .mailchimp-form input[type="submit"] {
   background-color: var(--accent-color);
   color: #111;
-  font-weight: 500;
   letter-spacing: .15em;
   text-transform: uppercase;
   border: 1px solid transparent;
@@ -829,7 +853,6 @@ article blockquote {
 
   article a {
     color: #ca2017 !important;
-    font-weight: 500;
   }
 
   .post hr {
@@ -846,6 +869,13 @@ article blockquote {
   }
 
   .page h1.page-title {
+    margin: 0 0 2rem;
+    font-size: 3rem;
+    line-height: 1.2;
+    font-weight: 700;
+  }
+
+  .post .post-title {
     margin: 0 0 2rem;
     font-size: 3rem;
     line-height: 1.2;
@@ -887,7 +917,6 @@ article blockquote {
   .mailchimp-form input[type="submit"] {
     background-color: var(--accent-color) !important;
     color: #111;
-    font-weight: 500;
   }
 
   .logo {
