--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -415,10 +415,17 @@ footer.post-meta {
 /* Conversation */
 
 .conversation {
-  max-width: 90%;
+  width: 90%;
+  max-width: 68rem;
   padding: 30px 0;
   margin: 0 auto;
   color: var(--text-color);
+}
+
+.conversation .microblog_conversation {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .conversation .microblog_time a {
@@ -435,6 +442,7 @@ footer.post-meta {
   border-radius: 100%;
   width: 25px;
   height: 25px;
+  max-width: 100% !important;
 }
 
 /* Navigation */
