--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -25,7 +25,7 @@
     <section class="e-content post-body">
         {{ .Content }}
     </section>
-    {{ with .Title }}
+    {{ if .Title }}
     <div class="post-meta">
       <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
     </div>
