More microblog theme mods

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -818,7 +818,11 @@ article blockquote {
   }
 
   .mobile-nav {
-    display:block;
+    display: block;
+  }
+
+  .page article p {
+    font-size: 1.8rem;
   }
 }
 
