More microblog theme mods

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -422,6 +422,15 @@ footer.post-meta {
   color: var(--text-color);
 }
 
+.microblog_conversation::before {
+  content: "Conversation";
+  color: var(--title-color);
+  font-family: var(--font-stack-sans);
+  font-size: 2.2rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+
 .conversation .microblog_conversation {
   display: flex;
   flex-direction: column;
