--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -29,24 +29,21 @@
   {{ template "_internal/opengraph.html" . }}
   <!---->
   {{ template "_internal/schema.html" . }}
-  <!---->
-  {{ template "_internal/twitter_cards.html" . }}
-  <!---->
   {{ end }}
 
   <link rel="me" href="https://micro.blog/{{ .Site.Author.username }}" />
 
   {{ with .Site.Params.medium_username }}
-		<link rel="me" href="https://instagram.com/{{ . }}" />
+		<link rel="me" href="https://medium.com/@{{ . }}" />
 	{{ end }}
-  {{ with .Site.Params.mastodon_username }}
-		<link rel="me" href="https://instagram.com/{{ . }}" />
+  {{ with .Site.Params.mastodon_profile_url }}
+		<link rel="me" href="{{ . }}" />
 	{{ end }}
   {{ with .Site.Params.linkedin_username }}
-		<link rel="me" href="https://instagram.com/{{ . }}" />
+		<link rel="me" href="https://www.linkedin.com/in/{{ . }}" />
 	{{ end }}
   {{ with .Site.Params.github_username }}
-		<link rel="me" href="https://instagram.com/{{ . }}" />
+		<link rel="me" href="https://github.com/{{ . }}" />
 	{{ end }}
   {{ with .Site.Params.instagram_username }}
 		<link rel="me" href="https://instagram.com/{{ . }}" />
