--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -32,32 +32,19 @@
   {{ end }}
 
   <link rel="me" href="https://micro.blog/{{ .Site.Author.username }}" />
-
-  {{ with .Site.Params.medium_username }}
-		<link rel="me" href="https://medium.com/@{{ . }}" />
-	{{ end }}
-  {{ with .Site.Params.mastodon_profile_url }}
-		<link rel="me" href="{{ . }}" />
-	{{ end }}
-  {{ with .Site.Params.linkedin_username }}
-		<link rel="me" href="https://www.linkedin.com/in/{{ . }}" />
-	{{ end }}
-  {{ with .Site.Params.github_username }}
-		<link rel="me" href="https://github.com/{{ . }}" />
-	{{ end }}
-  {{ with .Site.Params.instagram_username }}
-		<link rel="me" href="https://instagram.com/{{ . }}" />
-	{{ end }}
-
+  <link rel="me" href="https://medium.com/@juhaliikala" />
+  <link rel="me" href="https://www.linkedin.com/in/juhaliikala" />
+  <link rel="me" href="https://me.dm/@juhaliikala" />
+	
   <link rel="authorization_endpoint" href="https://micro.blog/indieauth/auth" />
-	<link rel="token_endpoint" href="https://micro.blog/indieauth/token" />
-	<link rel="micropub" href="https://micro.blog/micropub" />
-	<link rel="microsub" href="https://micro.blog/microsub" />
-	<link rel="webmention" href="https://micro.blog/webmention" />
-	<link rel="subscribe" href="https://micro.blog/users/follow" />
+  <link rel="token_endpoint" href="https://micro.blog/indieauth/token" />
+  <link rel="micropub" href="https://micro.blog/micropub" />
+  <link rel="microsub" href="https://micro.blog/microsub" />
+  <link rel="webmention" href="https://micro.blog/webmention" />
+  <link rel="subscribe" href="https://micro.blog/users/follow" />
 
   {{ range .Site.Params.plugins_css }}
-	  <link rel="stylesheet" href="{{ . }}" />
+	<link rel="stylesheet" href="{{ . }}" />
   {{ end }}
   {{ range $filename := .Site.Params.plugins_html }}
     {{ partial $filename $ }}
