--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,6 +35,7 @@
   <link rel="me" href="https://medium.com/@juhaliikala" />
   <link rel="me" href="https://www.linkedin.com/in/juhaliikala" />
   <link rel="me" href="https://me.dm/@juhaliikala" />
+  <link rel="me" href="https://www.instagram.com/nomadcouch/" />
 	
   <link rel="authorization_endpoint" href="https://micro.blog/indieauth/auth" />
   <link rel="token_endpoint" href="https://micro.blog/indieauth/token" />
