--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -452,6 +452,7 @@ footer.post-meta {
   display: flex;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .conversation .microblog_avatar {
