--- a/layouts/partials/post-list.html
+++ b/layouts/partials/post-list.html
@@ -3,6 +3,7 @@
     {{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "post") }}
     {{ $list := $paginator.Pages }}
     {{ range $list  }}
+        <small>j</small>
         {{ range first 1 .Site.Taxonomies.categories.featured }}
           {{ partial "featured-post-item.html" . }}
         {{ end }}
@@ -11,6 +12,7 @@
   {{ else }}
     {{ $list := where .Pages.ByDate.Reverse "Type" "post" }}
     {{ range $list  }}
+      <small>k</small>
       {{ partial "post-item.html" . }}
     {{ end }}
   {{ end }}
