Style improvs + add featured post to top

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -767,6 +767,12 @@ article blockquote {
   color: #ca2017
 }
 
+.is-featured {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 /* Spacing */
 
 .mt-1 { margin-top: 1rem !important; }
