--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,9 @@
   {{ if or .IsHome .Site.Params.paginate_categories }}
     {{ $paginator := .Paginate (where .Site.Pages.ByDate.Reverse "Type" "post") }}
     {{ $list := $paginator.Pages }}
+    {{ range first 1 .Site.Taxonomies.categories.featured }}
+      {{ partial "featured-post-item.html" . }}
+    {{ end }}
     {{ range $list  }}
       {{ partial "post-item.html" . }}
     {{ end }}
