Don't display featured post on homepage twice

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -382,6 +382,7 @@ aside h3 {
   grid-column-gap: 15px;
   grid-row-gap: 15px;
   grid-template-columns: 33% 33% 33%;
+  margin-top: 2rem;
 }
 
 /* Post & page contents */
