--- a/layouts/partials/post-item.html
+++ b/layouts/partials/post-item.html
@@ -1,4 +1,4 @@
-<section class="post-content">
+<article class="post-content">
   {{ if .Title }}
   <a class="cover-link" href="{{ .Permalink }}">
     {{- with $.Params.images -}}
@@ -10,7 +10,7 @@
       </figure>
     {{ end -}}
   </a>
-  <article class="mb-5">
+  <div class="mb-5">
     <header>
       <h2 class="post-title">
         <a href="{{ .Permalink }}">
@@ -20,7 +20,7 @@
     </header>
     {{ .Content }}
   {{ else }}
-  <article class="mb-5">
+  <div class="mb-5">
   {{ .Content }}
   {{ end }}
     <div class="post-meta">
@@ -28,5 +28,5 @@
         <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
       </a>
     </div>
-  </article>
-</section>
+  </div>
+</article>
