--- a/layouts/reply/single.html
+++ b/layouts/reply/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="h-entry post">
+<article class="h-entry post post-content">
   <header>
 	{{ with .Title }}
     <h1 class="p-name">{{ . }}</h1>
