--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="post-content">
+<article>
   {{ if .Title}}
     {{- with $.Params.images -}}
       <figure class="cover-image">
