--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article class="post-content">
+<article>
   {{- with $.Params.images -}}
     {{ if .Title }}
     <figure class="cover-image">
@@ -10,7 +10,7 @@
     </figure>
     {{ end }}
   {{ end -}}
-  <div class="h-entry post">
+  <div class="h-entry post post-content">
     <header>
       <h1 class="p-name page-title">{{ .Title }}</h1>
     </header>
