Modify article styles

--- a/layouts/partials/featured-post-item.html
+++ b/layouts/partials/featured-post-item.html
@@ -20,7 +20,7 @@
     </header>
     {{ .Content }}
   {{ else }}
-  <div class="mb-5">
+  <div class="mb-5 post-content">
   {{ .Content }}
   {{ end }}
     <div class="post-meta">
