--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -10,7 +10,7 @@
       </figure>
     {{ end -}}
   {{ end }}
-  <div class="h-entry post">
+  <div class="h-entry post post-content">
     <header>
     {{ with .Title }}
       <h1 class="p-name post-title">{{ . }}</h1>
