--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,9 +14,9 @@
     <header>
       <h1 class="p-name page-title">{{ .Title }}</h1>
     </header>
-    <section class="e-content post-body">
+    <div class="e-content post-body">
         {{ .Content }}
-    </section>
+    </div>
   </div>
 </article>
 {{ end }}
