--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -22,9 +22,9 @@
       </h2>
       {{ end }}
     </header>
-    <section class="e-content post-body">
+    <div class="e-content post-body">
         {{ .Content }}
-    </section>
+    </div>
     {{ if .Title }}
     <div class="post-meta">
       <time datetime="{{ .Date.Format "2006-01-02 15:04:05 -0700" }}" class="dt-published">→ {{ .Date.Format "3:04 PM, Jan 2" }}</time>
