--- a/layouts/reply/single.html
+++ b/layouts/reply/single.html
@@ -24,7 +24,7 @@
     </section>
   </div>
 </article>
-<section id="post-meta" class="clearfix">
+<div id="post-meta" class="clearfix">
   <a href="/">
     <img class="u-photo avatar" src="{{ .Site.Author.avatar }}" width="96" height="96">
     <div>
@@ -32,5 +32,5 @@
       <span><a href="https://micro.blog/{{ .Site.Author.username }}">@{{ .Site.Author.username }}</a></span>
     </div>
   </a>
-</section>
+</div>
 {{ end }}
