--- a/layouts/reply/single.html
+++ b/layouts/reply/single.html
@@ -19,9 +19,9 @@
       <a href="{{ .Params.reply_to_url }}" class="u-in-reply-to">{{ .Params.reply_to_hostname }}</a>
     {{ end }}
     </div>
-    <section class="e-content post-body">
+    <div class="e-content post-body">
         {{ .Content }}
-    </section>
+    </div>
   </div>
 </article>
 <div id="post-meta" class="clearfix">
