Add rel=me for https://juhaliikala.com/activitypub/juha

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,7 +39,7 @@
   <link rel="me" href="https://micro.blog/{{ .Site.Author.username }}" />
   <link rel="me" href="https://medium.com/@juhaliikala" />
   <link rel="me" href="https://www.linkedin.com/in/juhaliikala" />
-  <link rel="me" href="https://me.dm/@juhaliikala" />
+  <link rel="me" href="https://juhaliikala.com/activitypub/juha" />
   <link rel="me" href="https://www.instagram.com/nomadcouch/" />
 
   <link rel="authorization_endpoint" href="https://micro.blog/indieauth/auth" />
