--- a/layouts/partials/post-item.html
+++ b/layouts/partials/post-item.html
@@ -10,7 +10,7 @@
       </figure>
     {{ end -}}
   </a>
-  <div class="mb-5 post-content">
+  <div class="post-content">
     <header>
       <h2 class="post-title">
         <a href="{{ .Permalink }}">
