--- a/layouts/partials/featured-post-item.html
+++ b/layouts/partials/featured-post-item.html
@@ -10,7 +10,7 @@
       </figure>
     {{ end -}}
   </a>
-  <div class="mb-5 post-content">
+  <div class="post-content">
     <header>
       <h2 class="post-title">
         <a href="{{ .Permalink }}">
@@ -20,7 +20,7 @@
     </header>
     {{ .Content }}
   {{ else }}
-  <div class="mb-5 post-content">
+  <div class="post-content">
   {{ .Content }}
   {{ end }}
     <div class="post-meta">
