--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -335,7 +335,7 @@ time {
 .logo {
   background: #000;
   border-color: #fff;
-  color: #fff;
+  color: #fff !important;
   padding: 10px;
   line-height: 1;
 }
@@ -378,6 +378,10 @@ time {
   display: flex;
   flex-direction: column;
   padding-bottom: 3rem;
+}
+
+.side svg {
+  stroke: #111;
 }
 
 .photo-grid {
